--- a/date/2025-08/page-2.htm
+++ b/date/2025-08/page-2.htm
@@ -272,16 +272,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-19-free-vpn-node.htm" title="VPN安卓 | 8月19日21.8M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR免费节点订阅分享">VPN安卓 | 8月19日21.8M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="VPN设备 | 9月9日18.8M/S|免费VPN/Clash节点/Shadowrocket节点/SSR/V2ray免费节点订阅分享">VPN设备 | 9月9日18.8M/S|免费VPN/Clash节点/Shadowrocket节点/SSR/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-26-node-share.htm" title="VPN设备 | 8月26日18.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Clash节点/SSR免费节点订阅分享">VPN设备 | 8月26日18.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Clash节点/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-24-node-share-links.htm" title="VPN设备 | 9月24日20.2M/S|免费VPN/Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点免费节点订阅分享">VPN设备 | 9月24日20.2M/S|免费VPN/Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-11-free-vpn.htm" title="VPN安卓 | 8月11日18.2M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享">VPN安卓 | 8月11日18.2M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-2-top-vpn-node.htm" title="VPN设备 | 9月2日20.1M/S|免费VPN/V2ray节点/Shadowrocket节点/Clash节点/SSR免费节点订阅分享">VPN设备 | 9月2日20.1M/S|免费VPN/V2ray节点/Shadowrocket节点/Clash节点/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-25-top-vpn.htm" title="VPN设备 | 9月25日22.7M/S|免费VPN/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点免费节点订阅分享">VPN设备 | 9月25日22.7M/S|免费VPN/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-12-top-vpn-node.htm" title="VPN安卓 | 8月12日20.5M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray免费节点订阅分享">VPN安卓 | 8月12日20.5M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-8-free-node-subscribe.htm" title="VPN设备 | 9月8日22.1M/S|免费VPN/Shadowrocket节点/Clash节点/V2ray节点/SSR免费节点订阅分享">VPN设备 | 9月8日22.1M/S|免费VPN/Shadowrocket节点/Clash节点/V2ray节点/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-27-share-vpn.htm" title="VPN设备 | 8月27日22M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享">VPN设备 | 8月27日22M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-13-vpn-free.htm" title="VPN安卓 | 8月13日19.6M/S|免费SSR/V2ray节点/Clash节点/Shadowrocket免费节点订阅分享">VPN安卓 | 8月13日19.6M/S|免费SSR/V2ray节点/Clash节点/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-22-free-vpn-node.htm" title="VPN设备 | 9月22日20.3M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享">VPN设备 | 9月22日20.3M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-27-top-vpn-node.htm" title="VPN设备 | 9月27日19M/S|免费VPN/Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点免费节点订阅分享">VPN设备 | 9月27日19M/S|免费VPN/Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-vpn-node.htm" title="VPN设备 | 9月18日22.5M/S|免费VPN/SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享">VPN设备 | 9月18日22.5M/S|免费VPN/SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-top-vpn-node.htm" title="VPN设备 | 9月16日20.2M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享">VPN设备 | 9月16日20.2M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-node-share-links.htm" title="VPN设备 | 9月14日20.5M/S|免费VPN/Clash节点/SSR/Shadowrocket节点/V2ray免费节点订阅分享">VPN设备 | 9月14日20.5M/S|免费VPN/Clash节点/SSR/Shadowrocket节点/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-21-vpn-proxy.htm" title="VPN安卓 | 8月21日21.9M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享">VPN安卓 | 8月21日21.9M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-24-free-vpn.htm" title="VPN设备 | 8月24日22M/S|免费VPN/Shadowrocket节点/V2ray节点/Clash节点/SSR免费节点订阅分享">VPN设备 | 8月24日22M/S|免费VPN/Shadowrocket节点/V2ray节点/Clash节点/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-23-top-vpn-node.htm" title="VPN设备 | 8月23日21.7M/S|免费VPN/V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享">VPN设备 | 8月23日21.7M/S|免费VPN/V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-15-node-share-links.htm" title="VPN安卓 | 8月15日21.7M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享">VPN安卓 | 8月15日21.7M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -293,7 +293,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">4</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
