--- a/date/2025-09/page-3.htm
+++ b/date/2025-09/page-3.htm
@@ -112,6 +112,36 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-10">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-10-vpn-proxy.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 9月10日20M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享" src="/uploads/20241222-1/d5724d9f45324a2206331adc0791a09b.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-10-vpn-proxy.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 9月10日20M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、日本、新加坡、韩国、加拿大、欧洲、美国等地区,最高速度可达20 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-09">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-9-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 9月9日18.8M/S|免费VPN/Clash节点/Shadowrocket节点/SSR/V2ray免费节点订阅分享" src="/uploads/20241222-1/d5724d9f45324a2206331adc0791a09b.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-9-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 9月9日18.8M/S|免费VPN/Clash节点/Shadowrocket节点/SSR/V2ray免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、欧洲、美国、日本、香港、新加坡、韩国等地区,最高速度可达18.8 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-09-08">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-9-8-free-node-subscribe.htm" class="xcblog-blog-url">
@@ -242,16 +272,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-9-20-vpn-proxy.htm" title="VPN设备 | 9月20日22M/S|免费VPN/SSR/V2ray节点/Clash节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月20日22M/S|免费VPN/SSR/V2ray节点/Clash节点/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-18-share-vpn.htm" title="VPN安卓 | 8月18日19.6M/S|免费V2ray节点/Shadowrocket节点/SSR/Clash免费节点订阅分享">VPN安卓 | 8月18日19.6M/S|免费V2ray节点/Shadowrocket节点/SSR/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-27-top-vpn-node.htm" title="VPN设备 | 9月27日19M/S|免费VPN/Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点免费节点订阅分享">VPN设备 | 9月27日19M/S|免费VPN/Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-12-top-vpn.htm" title="VPN设备 | 9月12日22.9M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月12日22.9M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-23-top-vpn-node.htm" title="VPN设备 | 8月23日21.7M/S|免费VPN/V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享">VPN设备 | 8月23日21.7M/S|免费VPN/V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-7-free-node-subscribe-links.htm" title="VPN设备 | 9月7日21.3M/S|免费VPN/Shadowrocket节点/V2ray节点/SSR/Clash免费节点订阅分享">VPN设备 | 9月7日21.3M/S|免费VPN/Shadowrocket节点/V2ray节点/SSR/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-17-vpn-free.htm" title="VPN设备 | 9月17日22.2M/S|免费VPN/Shadowrocket节点/SSR/V2ray节点/Clash免费节点订阅分享">VPN设备 | 9月17日22.2M/S|免费VPN/Shadowrocket节点/SSR/V2ray节点/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-10-vpn-proxy.htm" title="VPN设备 | 9月10日20M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享">VPN设备 | 9月10日20M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-15-node-share-links.htm" title="VPN安卓 | 8月15日21.7M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享">VPN安卓 | 8月15日21.7M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-vpn.htm" title="VPN设备 | 9月1日21.4M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月1日21.4M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-6-node-share-links.htm" title="VPN安卓 | 8月6日20.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享">VPN安卓 | 8月6日20.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-12-top-vpn-node.htm" title="VPN安卓 | 8月12日20.5M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray免费节点订阅分享">VPN安卓 | 8月12日20.5M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-9-free-vpn-node.htm" title="VPN安卓 | 8月9日21.3M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR免费节点订阅分享">VPN安卓 | 8月9日21.3M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-19-free-vpn-node.htm" title="VPN设备 | 9月19日22.4M/S|免费VPN/V2ray节点/SSR/Shadowrocket节点/Clash免费节点订阅分享">VPN设备 | 9月19日22.4M/S|免费VPN/V2ray节点/SSR/Shadowrocket节点/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-13-vpn-github.htm" title="VPN设备 | 9月13日19.4M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享">VPN设备 | 9月13日19.4M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-29-free-vpn.htm" title="VPN设备 | 8月29日18.4M/S|免费VPN/SSR/Shadowrocket节点/V2ray节点/Clash免费节点订阅分享">VPN设备 | 8月29日18.4M/S|免费VPN/SSR/Shadowrocket节点/V2ray节点/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-16-vpn-node.htm" title="VPN安卓 | 8月16日18.3M/S|免费V2ray节点/SSR/Clash节点/Shadowrocket免费节点订阅分享">VPN安卓 | 8月16日18.3M/S|免费V2ray节点/SSR/Clash节点/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-6-top-vpn-node.htm" title="VPN设备 | 9月6日20.4M/S|免费VPN/Clash节点/Shadowrocket节点/V2ray节点/SSR免费节点订阅分享">VPN设备 | 9月6日20.4M/S|免费VPN/Clash节点/Shadowrocket节点/V2ray节点/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-7-vpn-free.htm" title="VPN安卓 | 8月7日21.1M/S|免费V2ray节点/Shadowrocket节点/SSR/Clash免费节点订阅分享">VPN安卓 | 8月7日21.1M/S|免费V2ray节点/Shadowrocket节点/SSR/Clash免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -263,7 +293,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">4</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
